--- a/App22.Selected/Resources/Icons.xaml
+++ b/App22.Selected/Resources/Icons.xaml
@@ -1,19 +1,20 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:o="http://schemas.microsoft.com/winfx/2006/xaml/presentation/options">
-    <Geometry o:Freeze="True" x:Key="IconUnknown">
-        M 100,50
-        A 50,50 0 1,1 99.999,50
-        M 100,50
-        A 50,50 0 1,1 100.001,50
+    <Geometry o:Freeze="True" x:Key="IconCherry">
+        M17,10c-0.2,0-0.5,0-0.7,0l-2.8-7.9c4.2,0.6,7.5,3.8,8.3,7.9c0.4,0.2,1.6,1.3,2.2,2.2C24,4.4,17.5-0.3,11.3,0  L6.4,13.7C6.2,14.2,6.5,14.8,7,15l0,0c0.5,0.2,1.1-0.1,1.3-0.6L12,4l3.7,10.4c0.2,0.5,0.8,0.8,1.3,0.6c0.5-0.2,0.8-0.8,0.6-1.3  L17,12c0,0,0,0,0,0c2.8,0,5,2.2,5,5c0,2.8-2.2,5-5,5s-5-2.2-5-5c0-1.3,0.5-2.5,1.3-3.3l-0.7-2.1C11,12.9,10,14.8,10,17  c0,1.2,0.3,2.3,0.8,3.2C9.8,21.4,8.5,22,7,22c-2.8,0-5-2.2-5-5c0-1.9,1.1-3.5,2.7-4.4l0.9-2.5C2.4,10.8,0,13.6,0,17c0,3.9,3.1,7,7,7  c1.9,0,3.7-0.8,5-2.1c1.3,1.3,3,2.1,5,2.1c3.9,0,7-3.1,7-7C24,13.1,20.9,10,17,10z
     </Geometry>
-    <Geometry o:Freeze="True" x:Key="IconProt">
-        M15,19a1,1,0,0,0-1-1H13V17h3a2,2,0,0,0,2-2V8L13,3H8A2,2,0,0,0,6,5V15a2,2,0,0,0,2,2h3v1H10a1,1,0,0,0-1,1H2v2H9a1,1,0,0,0,1,1h4a1,1,0,0,0,1-1h7V19ZM12,4.5,16.5,9H12Z
+    <Geometry o:Freeze="True" x:Key="IconGrape">
+        M16.7,1.7l-1.4-1.4l-2,2l1.4,1.4L16.7,1.7z M24,9.1C24,6.5,22.2,4,19,4c-1.3,0-2.4,0.4-3.5,1.4  c-0.8-0.8-1.9-1.3-3.1-1.4L8.7,0.3L7.3,1.7L10,4.4C9.5,4.7,9,5,8.5,5.4C5.3,2.3,0,4.6,0,9c0,2,1.2,3.8,3,4.6c-0.2,2.7,1.6,4.8,4,5.3  c0,3,2.4,5.1,5,5.1c2.8,0,5-2.3,5-5c0,0,0-0.1,0-0.1c2.5-0.5,4.2-2.9,4-5.2c0,0,0,0,0-0.1C23.1,12.7,24,10.9,24,9.1z M18.4,12.2  c1.4,1.8,0.2,4.3-1.9,4.7c-0.2-0.4-0.4-0.7-0.6-1c-0.5,0.5-1,0.9-1.7,1.1C16,19,14.5,22,12,22c-1.7,0-3.4-1.5-2.9-3.8l0.3-1.6  c-2.8,1.6-5.9-2-3.7-4.6c-0.3-0.7-0.5-1.4-0.6-2.1c-0.6,0.4-1.1,1-1.5,1.7C2.6,11.1,2,10,2,9c0-4,6-4,6,0h1c0,0,0,0,0,0  c0-1.7,1.3-3,3-3c1.7,0,3,1.3,3,3c0,0,0,0,0,0h1c0-4,6-4,6,0C22,12,19.5,12,18.4,12.2z M9.4,10.4l-1.8,1c1.2,2.3,4.1,3.2,6.5,2.1  l-0.8-1.8C11.9,12.4,10.2,11.8,9.4,10.4z
     </Geometry>
-    <Geometry o:Freeze="True" x:Key="IconPoke">
-        M18,7a1,1,0,0,0-1-1H16V2H14V6H10V2H8V6H7A1,1,0,0,0,6,7V8H2v2H6v4H2v2H6v1a1,1,0,0,0,1,1H8v4h2V18h4v4h2V18h1a1,1,0,0,0,1-1V16h4V14H18V10h4V8H18Zm-7,4H9V9h2Z
+    <Geometry o:Freeze="True" x:Key="IconCheese">
+        M23.4,1.1C23.2,1,23.1,1,22.9,1l-22,2C0.4,3,0,3.5,0,4v10c0,0.1,0,0.1,0,0.2C0.8,19.4,5.4,23,10.5,23  c0.5,0,1.1,0,1.7-0.1c0.2,0,0.4-0.1,0.5-0.2l11-9.9c0.2-0.2,0.3-0.5,0.3-0.7V2C24,1.6,23.8,1.2,23.4,1.1z M11,21  c-2,0.1-3.9-0.3-5.6-1.5C3.6,18.1,2.4,16,2,14h1v-2H2V8.9c0.6,0.8,1.4,1.6,2.3,2.2c2,1.4,4.3,2.1,6.7,2V21z M11.6,11  c-2.2,0.3-4.3-0.3-6.1-1.6C3.9,8.3,2.7,6.7,2.2,4.9L6,4.5V5h2V4.4l12.1-1.1L11.6,11z M22,11.6l-9,8.1v-7.2l5-4.5V9h2V7h-1l3-2.7  V11.6z M7,19h2v-2H7V19z M16,14h2v-2h-2V14z M10,7v2h2V7H10z
     </Geometry>
-    <CombinedGeometry x:Key="IconCircle">
+    <Geometry o:Freeze="True" x:Key="IconLemon">
+        M22.7,7l0.1-0.1C23.6,6.1,24,5,24,3.9c0-1.1-0.5-2.1-1.3-2.9c-1.6-1.4-4.1-1.3-5.7,0.3  c-0.3,0.3-0.8,0.4-1.3,0.3c-4-1.4-8.5-0.4-11.5,2.6c-3,3-4,7.5-2.6,11.5c0.2,0.5,0.1,0.9-0.3,1.3c-1.4,1.4-1.7,3.6-0.6,5.2  c0.7,1,1.8,1.7,3,1.8c0.1,0,0.3,0,0.4,0c1.1,0,2.1-0.4,2.9-1.2L7,22.7c0.3-0.3,0.8-0.4,1.3-0.3c4,1.4,8.5,0.4,11.5-2.6  c3-3,4-7.5,2.6-11.5C22.3,7.8,22.4,7.3,22.7,7z M21.4,5.5l-0.1,0.1c-0.9,0.9-1.1,2.1-0.7,3.3c1.1,3.3,0.3,7-2.2,9.5  c-2.5,2.5-6.2,3.3-9.5,2.2c-1.2-0.4-2.5-0.1-3.3,0.7l-0.1,0.1c-0.4,0.4-1,0.7-1.6,0.6c-0.6-0.1-1.2-0.4-1.5-0.9  c-0.5-0.8-0.4-1.9,0.4-2.7c0.9-0.9,1.1-2.1,0.7-3.3c-1.1-3.3-0.3-7,2.2-9.5c1.7-1.7,4.1-2.7,6.5-2.7c1,0,2,0.2,3,0.5  c1.2,0.4,2.5,0.1,3.3-0.7c0.8-0.8,2.1-0.9,2.9-0.2C21.7,2.9,22,3.4,22,4C22,4.5,21.8,5.1,21.4,5.5z M5.5,14.4l1.9-0.7  c-0.6-1.8-0.2-3.8,1.2-5.2L7.1,7.1C5.2,9,4.6,11.8,5.5,14.4z
+    </Geometry>
+
+    <CombinedGeometry x:Key="IconUnknown">
         <CombinedGeometry.Geometry1>
             <EllipseGeometry Center="100,100" RadiusX="50" RadiusY="50" />
         </CombinedGeometry.Geometry1>
