--- a/App22.Selected/Views/MainWindow.xaml
+++ b/App22.Selected/Views/MainWindow.xaml
@@ -10,33 +10,104 @@
         Style="{StaticResource MaterialDesignWindow}"
         Title="App22.Selected" Height="450" Width="400">
     <Window.Resources>
-        <cv:StatusToStyleConverter x:Key="StatusToStyleConverter" />
+        <cv:LockStatusToStyleConverter x:Key="LockStatusToStyleConverter" />
 
-        <!-- 锁定样式 -->
-        <Style x:Key="LockedStyle" TargetType="Border">
-            <Setter Property="BorderBrush" Value="Gray" />
-            <Setter Property="BorderThickness" Value="1,1,1,1" />
-            <Setter Property="CornerRadius" Value="5" />
-            <Setter Property="Background" Value="#FFF0F0F0" />
+        <!-- Locking style -->
+        <Style x:Key="LockingStyle" TargetType="Border">
+            <Setter Property="BorderBrush" Value="#D93F3B" />
+            <Setter Property="BorderThickness" Value="1" />
+            <Setter Property="CornerRadius" Value="8" />
+            <Setter Property="Background" Value="#FFFBF9F9" />
             <Setter Property="Effect">
                 <Setter.Value>
-                    <DropShadowEffect Color="Gray" BlurRadius="5" Opacity="0.5" />
+                    <DropShadowEffect Color="#D93F3B" BlurRadius="8" Opacity="0.6" Direction="270" />
                 </Setter.Value>
             </Setter>
+            <Style.Triggers>
+                <Trigger Property="IsMouseOver" Value="True">
+                    <Setter Property="Background" Value="#FFD3D3D3" />
+                    <Setter Property="Effect">
+                        <Setter.Value>
+                            <DropShadowEffect Color="#D93F3B" BlurRadius="12" Opacity="0.8" Direction="270" />
+                        </Setter.Value>
+                    </Setter>
+                </Trigger>
+            </Style.Triggers>
         </Style>
 
-        <!-- 解锁样式 -->
+
+        <!-- Unlocked style -->
         <Style x:Key="UnlockedStyle" TargetType="Border">
-            <Setter Property="BorderBrush" Value="LightGray" />
-            <Setter Property="BorderThickness" Value="1,1,1,1" />
-            <Setter Property="CornerRadius" Value="5" />
-            <Setter Property="Background" Value="#FFE0F7FA" />
+            <Setter Property="BorderBrush" Value="#4CBB70" />
+            <Setter Property="BorderThickness" Value="1" />
+            <Setter Property="CornerRadius" Value="8" />
+            <Setter Property="Background" Value="#E0F7F7" />
             <Setter Property="Effect">
                 <Setter.Value>
-                    <DropShadowEffect Color="LightBlue" BlurRadius="5" Opacity="0.3" />
+                    <DropShadowEffect Color="#4CBB70" BlurRadius="8" Opacity="0.4" Direction="270" />
                 </Setter.Value>
             </Setter>
+            <Style.Triggers>
+                <Trigger Property="IsMouseOver" Value="True">
+                    <Setter Property="Background" Value="#C0F0F0" />
+                    <Setter Property="Effect">
+                        <Setter.Value>
+                            <DropShadowEffect Color="#4CBB70" BlurRadius="12" Opacity="0.6" Direction="270" />
+                        </Setter.Value>
+                    </Setter>
+                </Trigger>
+            </Style.Triggers>
         </Style>
+
+
+        <!-- Locked style -->
+        <Style x:Key="LockedStyle" TargetType="Border">
+            <Setter Property="BorderBrush" Value="#FFCE00" />
+            <Setter Property="BorderThickness" Value="1" />
+            <Setter Property="CornerRadius" Value="8" />
+            <Setter Property="Background" Value="#F5F5F5" />
+            <Setter Property="Effect">
+                <Setter.Value>
+                    <DropShadowEffect Color="#FFCE00" BlurRadius="8" Opacity="0.6" Direction="270" />
+                </Setter.Value>
+            </Setter>
+            <Style.Triggers>
+                <Trigger Property="IsMouseOver" Value="True">
+                    <Setter Property="Background" Value="#E2E2E2" />
+                    <Setter Property="Effect">
+                        <Setter.Value>
+                            <DropShadowEffect Color="#FFCE00" BlurRadius="12" Opacity="0.7" Direction="270" />
+                        </Setter.Value>
+                    </Setter>
+                </Trigger>
+            </Style.Triggers>
+        </Style>
+
+
+        <!-- Unknown style -->
+        <Style x:Key="UnknownStyle" TargetType="Border">
+            <Setter Property="BorderBrush" Value="#4A90E2" />
+            <Setter Property="BorderThickness" Value="1" />
+            <Setter Property="CornerRadius" Value="8" />
+            <Setter Property="Background" Value="#FFFBFBFB" />
+            <Setter Property="Effect">
+                <Setter.Value>
+                    <DropShadowEffect Color="#4A90E2" BlurRadius="8" Opacity="0.5" Direction="270" />
+                </Setter.Value>
+            </Setter>
+            <Style.Triggers>
+                <Trigger Property="IsMouseOver" Value="True">
+                    <Setter Property="Background" Value="#DADADA" />
+                    <Setter Property="Effect">
+                        <Setter.Value>
+                            <DropShadowEffect Color="#4A90E2" BlurRadius="12" Opacity="0.6" Direction="270" />
+                        </Setter.Value>
+                    </Setter>
+                </Trigger>
+            </Style.Triggers>
+        </Style>
+
+
     </Window.Resources>
 
     <Grid>
@@ -46,7 +117,7 @@
         </Grid.RowDefinitions>
         <Border Margin="10" Grid.Row="0">
             <Border.Style>
-                <MultiBinding Converter="{StaticResource StatusToStyleConverter}">
+                <MultiBinding Converter="{StaticResource LockStatusToStyleConverter}">
                     <Binding Path="CurrentStatus" />
                     <Binding RelativeSource="{RelativeSource Self}" />
                 </MultiBinding>
